<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/menu_group">

        <item
            android:id="@+id/menu_home"
            android:title="@string/menu_home">

        </item>

        <item
            android:id="@+id/menu_coupons"
            android:title="@string/menu_coupons">

        </item>

        <item
            android:id="@+id/menu_transactions"
            android:title="@string/menu_transactions">

        </item>


        <item
            android:id="@+id/menu_catalogue"
            android:title="@string/menu_catalogue">

        </item>

        <item
            android:id="@+id/menu_feedback"
            android:title="@string/menu_feedback">

        </item>


        <item
            android:id="@+id/menu_logout"
            android:title="@string/menu_logout">

        </item>

    </group>
</menu>